# solana_copy_trading

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: mod.rs
src/services/: bot.rs  mod.rs  monitor.rs  solana.rs  telegram.rs
src/utils/: helpers.rs  mod.rs  trade.rs  wallet.rs
