[package]
name = "solana-copy-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["full"] }
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
solana-program = "1.17"
base64 = "0.21"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
futures = "0.3"
bs58 = "0.5"
regex = "1.5"
lazy_static = "1.4"
tokio-stream = "0.1"